--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -28,3 +28,19 @@ sql:
         inflection_exclude_table_names: []
         query_parameter_limit: 1
         omit_unused_structs: false
+        overrides:
+          - db_type: "uuid"
+            go_type: "github.com/google/uuid.UUID"
+            nullable: false
+          - db_type: "timestamptz"
+            go_type: "time.Time"
+            nullable: false
+          - db_type: "bigint"
+            go_type: "int64"
+            nullable: false
+          - db_type: "boolean"
+            go_type: "bool"
+            nullable: false
+          - db_type: "pgtype.bool"
+            go_type: "bool"
+            nullable: false
